# eu_file_scraper

./: .gitignore  README.md  council_config.json  ec_config.json  main_council_scalper.py  main_ec_scalper.py  pyproject.toml  scraper_utils.py
configs/: council_config.json  ec_config.json  parliament_docs_config.json  parliament_plenary_config.json
