[project]
name = "hyanne-file-scraper"
version = "0.1.0"
description = "A scraper for European Commission and Council documents"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "playwright>=1.40.0",
    "pdfplumber>=0.10.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.3",
    "pandas>=2.0.0",
    "filelock>=3.13.0",
    "google-cloud-translate>=3.15.0"
]
